--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -38,7 +38,7 @@
 .subscribe
   position: relative
   width: 350px
-  height: 55px
+  min-height: 55px
   border-radius: 4px
   overflow: hidden
   &__input
@@ -57,6 +57,7 @@
     right: 0
     top: 0
     min-width: 65px
+    max-width: 100px
     height: 100%
     border: none
     background-color: $primary
